correct zoom bug on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,7 @@ form {
 	.container {
 		/* grid-template-columns: 1fr; */
 		display: inline-block;
+		padding-top: 5rem;
 	}
 
 	.img {
@@ -256,7 +257,6 @@ form {
 	}
 
 	.login-content .logo {
-		margin-top: 5rem;
 		width: 75%;
 		text-align: center;
 	}
